--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: sans-serif;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
   max-width: 700px;
   margin-left: 40px;
 }
@@ -13,10 +13,10 @@ body {
 h1 {
   margin: 40px 0;
   font-size: 7em;
-  color: lightgray;
+  color: #01953c;
   -webkit-text-stroke-width: 2px;
   -webkit-text-stroke-color: black;
-  font-style: italic;
+  /* font-style: italic; */
 }
 
 h2 {
@@ -46,9 +46,58 @@ a {
   margin-bottom: 7em;
 }
 
-.project-image {
-  width: 100%;
+
+/* SLIDER */
+.project-slider {
+  position: relative;
 }
+
+.project-slider__next, .project-slider__previous { 
+  position: absolute;
+  top: 0;
+  width: 50%;
+  height: 100%;
+}
+
+.project-slider__next {
+  left: 50%;
+  cursor: e-resize;
+}
+.project-slider__previous {
+  left: 0;
+  cursor: w-resize;
+}
+
+.project-medias {
+  padding: 0;
+  width: 100%;
+  position: relative;
+  height: 400px;
+  list-style-type: none;
+}
+
+.project-media {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 0.4s ease-out;
+  overflow: hidden;
+}
+
+.project-media--active {
+  opacity: 1;
+}
+
+.project-image, .project-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
 
 .project-link {
   font-size: 1.7em;
